--- a/about.html
+++ b/about.html
@@ -193,11 +193,11 @@
                                 <h2>JORGE LUIS JACOBO GARCÍA</h2>
                                 <p>Abogado por la UNT</p>
                                 <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                    <a href="https://www.linkedin.com/in/jorgejacobog" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="https://www.instagram.com/jnsasesoreslegales" target="_blank"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/JNSASESORESLEGALES" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.tiktok.com/@jns.asesores.lega" target="_blank"><i class="fab fa-tiktok"></i></a>
+                                </div>                                
                             </div>
                         </div>
                     </div>
@@ -210,11 +210,12 @@
                                 <h2>KAZUO JOSÉ LUIS SOBRINO VARGAS</h2>
                                 <p>Abogado por la UNT</p>
                                 <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.linkedin.com/in/kazuo-sobrino/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="https://www.instagram.com/jnsasesoreslegales" target="_blank"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/JNSASESORESLEGALES" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.tiktok.com/@jns.asesores.lega" target="_blank"><i class="fab fa-tiktok"></i></a>
                                 </div>
+                                
                             </div>
                         </div>
                     </div>
@@ -227,11 +228,11 @@
                                 <h2>JOSIF VLADIMIR NARBAIZA CHANDUCAS</h2>
                                 <p>Abogado por la UPAO</p>
                                 <div class="team-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                    <a href="http://www.linkedin.com/in/josifnarbaizach" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="https://www.instagram.com/jnsasesoreslegales" target="_blank"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/JNSASESORESLEGALES" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.tiktok.com/@jns.asesores.lega" target="_blank"><i class="fab fa-tiktok"></i></a>
+                                </div>                                
                             </div>
                         </div>
                     </div>
