--- a/contacto.html
+++ b/contacto.html
@@ -150,7 +150,8 @@
                 </div>
                 <div class="col-lg-6" style="min-height: 400px;">
                     <div class="position-relative h-100 rounded overflow-hidden">
-                        <iframe style="width: 100%; height: 100%; object-fit: cover;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.8137600961754!2d-79.04150513154798!3d-8.120436346939877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91ad3d74e70b5105%3A0xdfa624fc3b7c3d6f!2s%C3%93valo%20Papal!5e0!3m2!1ses!2spe!4v1722901612589!5m2!1ses!2spe"  frameborder="0" style="border:0;" allowfullscreen=""  aria-hidden="false" tabindex="0"></iframe>
+                        
+                        <iframe style="width: 100%; height: 100%; object-fit: cover;"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3020.870896631002!2d-79.03229509365353!3d-8.119745915849206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91ad3d776c9a620b%3A0xdaa0f19b290b3138!2sBolivia%20329%2C%20Trujillo%2013008!5e0!3m2!1ses-419!2spe!4v1732422588007!5m2!1ses-419!2spe" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
